# src/main/java/com/nelumbo/zoo_api/dto/AnimalCountBySpecies.java
@@ -1,3 +1,8 @@
 package com.nelumbo.zoo_api.dto;
 
-public record AnimalCountBySpecies(String speciesName, Long animalCount) {}
+public record AnimalCountBySpecies(String speciesName, Long animalCount) {
+
+    public Long getCount() {
+        return this.animalCount;
+    }
+}
