# src/main/java/com/nelumbo/zoo_api/dto/AnimalCountByZone.java
@@ -1,3 +1,11 @@
 package com.nelumbo.zoo_api.dto;
 
-public record AnimalCountByZone(String zoneName, Long animalCount) {}
+public record AnimalCountByZone(String zoneName, Long animalCount) {
+
+
+    public Long getCount() {
+        return this.animalCount;
+    }
+
+}
+
