# src/main/java/com/nelumbo/zoo_api/dto/SearchResults.java
@@ -4,7 +4,8 @@ import java.util.List;
 
 public record SearchResults(
         List<ZoneSearchResult> zones,
-        List<AnimalSearchResult> animals,
+        List<AnimalDetailResponse> animals,
+        List<SpecieSearchResult> species,
         List<CommentSearchResult> comments,
         List<ReplySearchResult> replies
 ) {}
