# src/main/java/com/nelumbo/zoo_api/dto/SpecieSearchResult.java
@@ -1,0 +1,3 @@
+package com.nelumbo.zoo_api.dto;
+
+public record SpecieSearchResult(Long id, String name) {}
