# src/main/resources/static/docs/openapi.yaml
@@ -107,8 +107,8 @@ paths:
     get:
       tags:
         - zone-controller
-      summary: Listar zonas
-      description: Obtener todas las zonas disponibles
+      summary: Buscar Zona
+      description: Obtener la zonas especificada
       operationId: getZoneById
       parameters:
         - name: id
@@ -204,7 +204,7 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        '204':
           description: OK
           content:
             '*/*':
@@ -234,8 +234,8 @@ paths:
     get:
       tags:
         - species-controller
-      summary: Listar especies
-      description: Obtener todas las especies registradas
+      summary: Buscar especies
+      description: Obtener la especie especificada
       operationId: getSpeciesById
       parameters:
         - name: id
@@ -331,7 +331,7 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        '204':
           description: OK
           content:
             '*/*':
@@ -458,7 +458,7 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        '204':
           description: OK
           content:
             '*/*':
@@ -631,6 +631,19 @@ paths:
         '503':
           $ref: '#/components/responses/serviceUnavailableResponse'
   /api/comments:
+    get:
+      tags:
+        - comment-controller
+      operationId: getAllComments
+      summary: Ver comentarios
+      description: Ver todos los comentarios
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/SuccessResponseDTOListCommentResponse'
     post:
       tags:
         - comment-controller
@@ -649,7 +662,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/CommentResponse'
+                $ref: '#/components/schemas/SuccessResponseDTOCommentResponse'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -691,12 +704,12 @@ paths:
               $ref: '#/components/schemas/CommentReplyRequest'
         required: true
       responses:
-        '200':
+        '201':
           description: OK
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/CommentResponse'
+                $ref: '#/components/schemas/SuccessResponseDTOCommentReplyRequest'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -809,7 +822,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/SearchResults'
+                $ref: '#/components/schemas/SuccessResponseDTOSearchResults'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -880,7 +893,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/AnimalCountByZone'
+                  $ref: '#/components/schemas/SuccessResponseDTOAnimalCountByZone'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -916,7 +929,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/AnimalCountBySpecies'
+                  $ref: '#/components/schemas/SuccessResponseDTOAnimalCountBySpecies'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -959,7 +972,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/AnimalDetailResponse'
+                  $ref: '#/components/schemas/SuccessResponseDTOAnimalResponse'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -1000,7 +1013,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/CommentResponse'
+                $ref: '#/components/schemas/SuccessResponseDTOCommentResponse'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -1035,7 +1048,7 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        '204':
           description: OK
         '400':
           $ref: '#/components/responses/badRequestResponse'
@@ -1057,14 +1070,20 @@ paths:
           $ref: '#/components/responses/internalServerErrorResponse'
         '503':
           $ref: '#/components/responses/serviceUnavailableResponse'
-  /api/comments/animal/{animalId}:
+  /api/comments/zone/{zoneId}/animal/{animalId}:
     get:
       tags:
         - comment-controller
-      summary: Comentarios de animal
-      description: Obtener todos los comentarios de un animal específico
+      summary: Comentarios x Zona y Animal
+      description: Es necesario seleccionar la zona y luego el animal, allí se visualizará el listado de mensajes
       operationId: getCommentsForAnimal
       parameters:
+        - name: zoneId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
         - name: animalId
           in: path
           required: true
@@ -1077,49 +1096,7 @@ paths:
           content:
             '*/*':
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/CommentResponse'
-        '400':
-          $ref: '#/components/responses/badRequestResponse'
-        '401':
-          $ref: '#/components/responses/unauthorizedResponse'
-        '403':
-          $ref: '#/components/responses/forbiddenResponse'
-        '404':
-          $ref: '#/components/responses/notFoundResponse'
-        '406':
-          $ref: '#/components/responses/notAcceptableResponse'
-        '413':
-          $ref: '#/components/responses/payloadTooLargeResponse'
-        '415':
-          $ref: '#/components/responses/unsupportedMediaTypeResponse'
-        '429':
-          $ref: '#/components/responses/tooManyRequestsResponse'
-        '500':
-          $ref: '#/components/responses/internalServerErrorResponse'
-        '503':
-          $ref: '#/components/responses/serviceUnavailableResponse'
-  /api/animals/by-date:
-    get:
-      tags:
-        - animal-controller
-      summary: Animales por fecha
-      description: Listar animales registrados en una fecha específica
-      operationId: getAnimalsByDate_1
-      parameters:
-        - name: date
-          in: query
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/SuccessResponseDTOListAnimalResponse'
+                $ref: '#/components/schemas/SuccessResponseDTOListCommentResponse2'
         '400':
           $ref: '#/components/responses/badRequestResponse'
         '401':
@@ -1393,6 +1370,61 @@ components:
         data:
           $ref: '#/components/schemas/AuthResponseDTO'
         errors: {}
+    SuccessResponseDTOCommentResponse:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/CommentResponse'
+        errors: { }
+    SuccessResponseDTOCommentReplyRequest:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/CommentReplyRequest'
+        errors: { }
+    SuccessResponseDTOSearchResults:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/SearchResults'
+        errors: { }
+    SuccessResponseDTOAnimalCountByZone:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/AnimalCountByZone'
+        errors: { }
+    SuccessResponseDTOAnimalCountBySpecies:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/AnimalCountBySpecies'
+        errors: { }
+    SuccessResponseDTODouble:
+      type: object
+      properties:
+        data:
+          type: number
+          format: double
+        errors: { }
+
+    SuccessResponseDTOListAnimalCountByZone:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/AnimalCountByZone'
+        errors: { }
+
+    SuccessResponseDTOListAnimalCountBySpecies:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/AnimalCountBySpecies'
+        errors: { }
     SuccessResponseDTOListZoneResponse:
       type: object
       properties:
@@ -1462,7 +1494,11 @@ components:
         animals:
           type: array
           items:
-            $ref: '#/components/schemas/AnimalSearchResult'
+            $ref: '#/components/schemas/AnimalDetailResponse'
+        species:
+          type: array
+          items:
+            $ref: '#/components/schemas/SpecieSearchResult'
         comments:
           type: array
           items:
@@ -1471,6 +1507,14 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ReplySearchResult'
+    SpecieSearchResult:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
     ZoneSearchResult:
       type: object
       properties:
@@ -1517,6 +1561,47 @@ components:
           items:
             $ref: '#/components/schemas/SpeciesResponse'
         errors: {}
+    SuccessResponseDTOListCommentResponse:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/CommentResponse'
+        errors: {}
+    CommentResponse2:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        message:
+          type: string
+        author:
+          type: string
+        createdAt:
+          type: string
+        animalId:
+          type: integer
+          format: int64
+        animalName:
+          type: string
+        zoneId:
+          type: integer
+          format: int64
+        zoneName:
+          type: string
+        parentCommentId:
+          type: integer
+          format: int64
+    SuccessResponseDTOListCommentResponse2:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/CommentResponse2'
+        errors: {}
     SuccessResponseDTOListAnimalResponse:
       type: object
       properties:
@@ -1527,9 +1612,6 @@ components:
         errors: {}
     SuccessResponseDTOVoid:
       type: object
-      properties:
-        data: {}
-        errors: {}
   securitySchemes:
     Security_Token:
       type: http
